--- a/cfb2022.html
+++ b/cfb2022.html
@@ -1754,7 +1754,7 @@ module.exports = window.Shiny;
 <body style="background-color: white;">
 <div id="htmlwidget_container">
 <h1 style="color:#000;background:#FFFFFF;text-align:left;font-size:30px;font-style:normal;font-weight:bold;text-decoration:;letter-spacing:px;word-spacing:px;text-transform:;text-shadow:;margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px">
-CFB Ratings 2022
+CFB Ratings 2021 (End of Season)
 </h1>
 <div id="htmlwidget-51824498b709fe330113" class="reactable html-widget" style="width:auto;height:auto;">
 
